envoy/envoy.yaml
admin:
  address:
    socket_address: {address: 0.0.0.0, port_value: 9901}

static_resources:
  listeners:
    - name: php_http
      address:
        socket_address: {address: 0.0.0.0, port_value: 8080}
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: php_http
                codec_type: HTTP1
                route_config:
                  name: upstream_route
                  virtual_hosts:
                    - name: upstream
                      domains: ["*"]
                      routes:
                        - match: {prefix: "/"}
                          route:
                            cluster: api
                            timeout: 5s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: api
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      connect_timeout: 2s
      load_assignment:
        cluster_name: api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: {address: upstream, port_value: 8443}
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          common_http_protocol_options:
            idle_timeout: 60s
          explicit_http_config:
            http_protocol_options: {} # HTTP/1.1, com keep-alive e pool padrão.
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: upstream
          common_tls_context:
            alpn_protocols: [http/1.1]
            validation_context:
              trusted_ca: {filename: /ca/ca.crt}
              match_typed_subject_alt_names:
                - san_type: DNS
                  matcher: {exact: upstream}
